2014-12-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* jit-lock.el (jit-lock-function): Don't defer if jit-lock-defer-time
	is 0 and there is no input pending.

2014-12-15  Juri Linkov  <juri@linkov.net>

	* replace.el (query-replace-read-from): Use query-replace-compile-replacement
	only on the return value (bug#19383).

2014-12-15  Juri Linkov  <juri@linkov.net>

	* isearch.el (isearch-lazy-highlight-search): Extend the bound of
	the wrapped search by the length of the search string to be able
	to lazy-highlight the whole search string at point (bug#19353).

2014-12-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-fold-text): Don't bug out on zero-length text.

2014-12-14  Alan Mackenzie  <acm@muc.de>

	* lisp/cus-start.el (all): Add fast-but-imprecise-scrolling.

2014-12-14  Artur Malabarba  <bruce.connor.am@gmail.com>

	* let-alist.el: Add lexical binding.

2014-12-14  Steve Purcell  <steve@sanityinc.com>  (tiny change)

	* emacs-lisp/package.el (package-menu-mode): Use an extra column
	for the "Version" column, to accomodate date-and-time-based
	versions.

2014-12-14  Cameron Desautels  <camdez@gmail.com>

	* cus-edit.el (custom-unsaved-options): New function, extracted
	from `customize-unsaved'.
	(custom-unsaved): Use it.
	(custom-prompt-customize-unsaved-options): New function.
	(Bug#19328)

2014-12-14  Dmitry Gutov  <dgutov@yandex.ru>

	* fringe.el (fringe-bitmap-p): Fix 2014-12-05 breakage.

2014-12-14  Dmitry Gutov  <dgutov@yandex.ru>

	Move ASYNC argument to the `diff' VC command to the fifth
	position, for better compatibility with existing third-party code,
	and document it.

	* vc/vc.el (vc-diff-internal): Pass `async' argument to the
	backend `diff' command in the last position.

	* vc/vc-svn.el (vc-svn-diff):
	* vc/vc-src.el (vc-src-diff):
	* vc/vc-sccs.el (vc-sccs-diff):
	* vc/vc-rcs.el (vc-rcs-diff):
	* vc/vc-mtn.el (vc-mtn-diff):
	* vc/vc-hg.el (vc-hg-diff):
	* vc/vc-git.el (vc-git-diff):
	* vc/vc-dav.el (vc-dav-diff):